# chirp

./: .gitignore  .runner-version  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-chirp-c.yml  release-chirp-c.yml  release-chirp-desktop.yml  release-chirp-runner.yml  release-chirp-server.yml  test-release.yml  website.yml
chirp-c/: CMakeLists.txt  README.md
chirp-c/scripts/: convert_codec_to_gguf.py  convert_model_to_gguf.py  pyproject.toml
chirp-c/src/: main.cpp  qwen3_tts.cpp  qwen3_tts.h
chirp-c/src/ar/: coreml_code_predictor_stub.cpp  gguf_loader.h  qwen3_tts_code_predictor_graph.cpp  qwen3_tts_embeddings.cpp  qwen3_tts_forward.cpp  qwen3_tts_model.cpp  qwen3_tts_prefill_graph.cpp  tts_transformer.h
chirp-c/src/decoder/: README.md  audio_tokenizer_decoder.h  codec_decoder_lifecycle.cpp  codec_decoder_model.cpp  codec_wav.cpp  codec_wav.h
chirp-c/src/encoder/: codec_tensor_reader.h
chirp-c/src/speaker/: speaker_encoder.cpp  speaker_encoder.h
chirp-c/src/text/: qwen_tokenizer.cpp  qwen_tokenizer.h
chirp-desktop/: package.json  pnpm-lock.yaml  tailwind.config.ts
chirp-desktop/src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
chirp-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
chirp-desktop/src-tauri/capabilities/: default.json
chirp-desktop/src-tauri/icons/: icon.icns
chirp-desktop/src-tauri/src/: analytics.rs  files.rs  lib.rs  main.rs  model.rs  runner.rs  voices.rs
chirp-desktop/src-tauri/src/runner/: binary.rs  client.rs  dto.rs  errors.rs  file_ops.rs  mod.rs  process.rs
chirp-desktop/src/assets/: voices.json
chirp-desktop/src/components/: AppFrame.tsx  CreateStatus.tsx  PageTransition.tsx  WaveformPlayer.tsx  WorkspaceHeader.tsx  pages.tsx  ui.tsx
chirp-desktop/src/components/agents/: AgentsPanel.tsx
chirp-desktop/src/lib/: constants.ts  kokoroVoices.ts  types.ts  voices.ts
chirp-desktop/src/pages/: AgentsPage.tsx  OnboardPage.tsx  SettingsPage.tsx
chirp-desktop/src/pages/home/: EditorCard.tsx  HomePage.tsx  VoiceSettings.tsx
chirp-runner/: README.md  go.mod  go.sum
chirp-runner/cmd/chirp/: commands.go  main.go
chirp-runner/internal/chirpc/: chirpc.go
chirp-runner/internal/kokoroc/: kokoroc.go
chirp-runner/internal/server/: docs.go  handlers.go  server.go  skill.go  sources.go
chirp-server/: Cargo.toml
chirp-server/src/: cli.rs  main.rs  parent.rs
chirp-server/src/runtime/: kokoro.rs  mod.rs  qwen.rs
chirp-server/src/server/: docs.rs  dto.rs  errors.rs  mod.rs  skill.rs  sources.rs  state.rs  util.rs
chirp-server/src/server/handlers/: load.rs  metadata.rs  mod.rs  speech.rs  state.rs
chirp-website/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
chirp-website/public/: installer.sh
chirp-website/src/: App.tsx  index.css  main.tsx
chirp-website/src/components/: DownloadCta.tsx  LinuxInstallModal.tsx  SiteFooter.tsx  SiteHeader.tsx  StudioPreview.tsx
chirp-website/src/components/icons/: GithubIcon.tsx  LinuxIcon.tsx  MacIcon.tsx  PlatformIcon.tsx  WindowsIcon.tsx
chirp-website/src/components/ui/: button.tsx
chirp-website/src/lib/: latestRelease.ts  latest_release.json  links.ts  platform.ts
chirp-website/src/pages/: HomePage.tsx
crates/espeak-rs/: Cargo.toml
crates/espeak-rs-sys/: Cargo.toml  build.rs
crates/espeak-rs/src/: lib.rs
crates/ggml-rs-sys/: Cargo.toml  build.rs
crates/kokoro-rs/: Cargo.toml
crates/kokoro-rs/examples/: basic.rs
crates/kokoro-rs/src/: error.rs  lib.rs
crates/kokoro-rs/src/audio/: mod.rs  wav.rs
crates/kokoro-rs/src/model/: mod.rs
crates/kokoro-rs/src/phoneme/: chunk.rs  espeak.rs  misaki.rs  mod.rs  tokenize.rs
crates/kokoro-rs/src/voice/: archive.rs  mod.rs  types.rs
crates/qwentts-rs/: Cargo.toml
crates/qwentts-rs/examples/: basic.rs  voice_design.rs
crates/qwentts-rs/src/: error.rs  lib.rs
crates/qwentts-rs/src/ar/: classify.rs  config.rs  map.rs  mod.rs  types.rs
crates/qwentts-rs/src/audio/: mod.rs  signal.rs  wav.rs
crates/qwentts-rs/src/codec/: config.rs  map.rs  mod.rs  types.rs
crates/qwentts-rs/src/ggml_runtime/: code_predictor.rs  codec_decode.rs  codec_graph.rs  drop.rs  generate.rs  gguf.rs  loading.rs  metadata.rs  mod.rs  prefill.rs  talker_graph.rs  tensors.rs  types.rs  weights.rs
crates/qwentts-rs/src/speaker/: encoder.rs  mod.rs  ops.rs  types.rs
crates/qwentts-rs/src/text/: mod.rs  prompt.rs  tokenizer.rs
crates/qwentts-rs/tools/gguf/: README.md  convert_model_to_gguf.py  pyproject.toml
desktop/: .gitignore  package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  model.rs  runner.rs
docs/: ARCHITECTURE.md  BUILDING.md  architecture.md
docs/agents/: skill.md
docs/code-signing/: macos.md  windows_esigning.md  windows_yubikey.md
plans/kokoro-chunking/: kokoro_chunking_001.py
plans/runtime_standalone/: runtime_standalone_001.md
runner/: README.md  go.mod
runner/cmd/chirp/: commands.go
runner/internal/chirpc/: chirpc.go
runner/internal/server/: errors.go  handlers.go  server.go
runtimes/kokoro/: CMakeLists.txt  README.md
runtimes/kokoro/examples/: basic.cpp
runtimes/kokoro/src/: chirp_kokoro.cpp  chirp_kokoro.h
runtimes/kokoro/src/internal/: chunk.cpp  chunk.h  kokoro_model.cpp  kokoro_model.h  misaki.cpp  misaki.h  phonemize.cpp  phonemize.h  voice_loader.cpp  voice_loader.h
runtimes/kokoro/worker/: main.cpp
runtimes/qwen/: CMakeLists.txt  README.md
runtimes/qwen/examples/basic/: main.cpp
runtimes/qwen/scripts/: convert_model_to_gguf.py
runtimes/qwen/src/ar/: README.md  coreml_code_predictor.h  gguf_loader.cpp  qwen3_tts_code_predictor.cpp  qwen3_tts_generate.cpp  qwen3_tts_lifecycle.cpp  qwen3_tts_talker_graph.cpp
scripts/: build-libs.py  download-libs.py  generate_kokoro_voices.py  package-kokoro-models.py  package-libs.py  package-models.py  package-runner.py  package-server.py  pre_build.py  sign_server.py  sign_windows.py  website_links.py
(+10 files in other folders)
