[package]
name = "chirp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chirp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
kokoro-rs = { path = "../crates/kokoro-rs" }
qwentts-rs = { path = "../crates/qwentts-rs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower-http = { version = "0.6.7", features = ["catch-panic"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
