[package]
name = "chirp"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chirp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
showfile = "0.1.1"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util"] }
tauri-plugin-clipboard-manager = "2"
