[package]
name = "espeak-rs-sys"
version = "0.1.9"
edition = "2021"
description = "Rust bindings to espeak-ng"
license = "MIT"
repository = "https://github.com/thewh1teagle/piper-rs"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
glob = "0.3.1"

[features]
default = []
compile-espeak-intonations = []
