[package]
name = "kokoro-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["compile-espeak-intonations"]
compile-espeak-intonations = ["espeak-rs/compile-espeak-intonations"]

[dependencies]
espeak-rs = { version = "0.1.9", default-features = false }
hound = "3.5.1"
ndarray = "0.16.1"
npyz = "0.9.0"
ort = "=2.0.0-rc.12"
thiserror = "2.0.18"
zip = "2.4.2"

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
