[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gguf>=0.18.0",
    "numpy>=2.4.4",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]
